--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -2,3 +2,8 @@
   <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
   <button type="submit">Search</button>
 </form>
+
+<!-- Карточки изображений -->
+<div class="gallery container"></div>
+<div id="sentinel"></div>
+
