--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,26 +1,131 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
   line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
+  color: #2a2a2a;
 }
 
-.example code {
-  font-family: monospace;
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.container {
+  margin: 0px auto;
+  padding: 10px 16px;
+}
+
+.gallery {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin-top: 90px;
+}
+
+.gallery__item {
+  display: block;
+  flex: 0 1 calc((100% - 90px) / 4);
+  text-decoration: none;
+  color: inherit;
+}
+@media screen and (max-width: 1199px) {
+  .gallery__item {
+    flex: 0 1 calc((100% - 30px) / 2);
+  }
+}
+@media screen and (max-width: 767px) {
+  .gallery__item {
+    flex: 0 1 100%;
+  }
+}
+
+.photo-card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.8);
+}
+
+.photo-card img {
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 10px;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 12px;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  background-color: #4441df;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.8);
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.search-form input {
+  border-style: none;
+  align-content: center;
+  border-radius: 4px;
+  width: 180px;
+  height: 40px;
+  padding: 10px;
   font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
+  outline: none;
+  border: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.search-form input::-moz-placeholder {
+  font-size: 16px;
+  color: #cccccc;
+}
+.search-form input::placeholder {
+  font-size: 16px;
+  color: #cccccc;
 }
 
-.example .background {
-  height: 240px;
-  background-image: url("../images/logo.png");
-  background-size: cover;
-  background-position: center;
+.search-form input :focus {
+  outline: #4b9bdd;
+}
+
+.btn-search {
+  width: 100px;
+  height: 40px;
+  font-size: 16px;
+  font-weight: 500;
+  border: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  font-family: inherit;
+  cursor: pointer;
+  transition: background-color 300ms linear, color 300ms linear;
+}
+.btn-search:hover, .btn-search:focus {
+  background-color: #4b9bdd;
+  color: #ffffff;
 }/*# sourceMappingURL=index.css.map */
